<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/add"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            android:text="@string/title"
            android:textSize="18sp"
            android:layout_width="75dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"/>
        <EditText
            android:id="@+id/titleTxt"
            android:inputType="text"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="4dp"
            android:hint="@string/title_hint" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-15dp">
        <TextView
            android:text="@string/date"
            android:textSize="18sp"
            android:layout_width="75dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="6dp"/>
        <DatePicker
            android:id="@+id/datePick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:spinnersShown="true"
            android:datePickerMode="spinner"
            android:scaleX=".9"
            android:scaleY="0.8">

        </DatePicker>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-65dp">
        <TextView
            android:text="@string/time"
            android:textSize="18sp"
            android:layout_width="80dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"/>
        <TimePicker
            android:id="@+id/timePickPick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:scaleX=".9"
            android:scaleY="0.8">

        </TimePicker>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp">
        <TextView
            android:text="@string/note"
            android:textSize="18sp"
            android:layout_width="75dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"/>
        <EditText
            android:id="@+id/noteTxt"
            android:inputType="text"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="4dp"
            android:hint="@string/note_hint" />
    </LinearLayout>
</LinearLayout>